<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_weight="100"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Codificador">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/toolbarhome"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Codigo_A_Enviar"
        android:id="@+id/textView_CodigoEnviar"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/Padding_Inferior_Codigos"
        android:layout_margin="5dp"
        android:textColor="#071bff"
        android:layout_marginBottom="10dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:columnCount="4"
        android:rowCount="6">

        <ImageButton
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/c"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/imageButtonc"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigoc"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="1"
            android:layout_column="0"/>

        <ImageButton
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/d"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/imageButtond"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigod"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="1"
            android:layout_column="1"/>

        <ImageButton
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/f"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/imageButtonf"
            android:layout_row="0"
            android:layout_column="2"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigof"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="1"
            android:layout_column="2"/>

        <ImageButton
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/a"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="2"
            android:layout_column="0"
            android:id="@+id/imageButtona"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigoa"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="3"
            android:layout_column="0"/>

        <ImageButton
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/b"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/imageButtonb"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigob"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="3"
            android:layout_column="1"/>

        <ImageButton
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/e"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/imageButtone"
            android:layout_row="0"
            android:layout_column="3"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigoe"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="1"
            android:layout_column="3"/>

        <ImageButton
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/h"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/imageButtonh"
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigoh"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="3"
            android:layout_column="2"/>

        <ImageButton
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/g"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/imageButtong"
            android:layout_row="2"
            android:layout_column="3"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigog"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="3"
            android:layout_column="3"/>

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/repeat"
            android:layout_row="4"
            android:layout_column="1"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/buttonRep"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigorep"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="5"
            android:layout_column="1"/>

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/plus"
            android:layout_row="4"
            android:layout_column="2"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/buttonRep1"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigorep1"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="5"
            android:layout_column="2"/>

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/end"
            android:layout_row="4"
            android:layout_column="3"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/buttonEnd"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigoend"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="5"
            android:layout_column="3"/>

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            tools:ignore="ContentDescription"
            android:layout_width="@dimen/Tamaño_Botones"
            android:layout_height="@dimen/Tamaño_Botones"
            android:background="@drawable/salto"
            android:layout_row="4"
            android:layout_column="0"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/buttonSalto"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/Tamaño_Botones"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Codigo_Prueba"
            android:id="@+id/Codigosalto"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:layout_row="5"
            android:layout_column="0"/>
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Cambiar_Codigo"
        android:id="@+id/textView_CambiarCodigos"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:textColor="#071bff"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:text="@string/Ingrese_Nuevo_Codigo"
            android:id="@+id/textView_CambiarCodigos2"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:textColor="#071bff"
            android:layout_marginBottom="10dp"/>

        <ImageView
            tools:ignore="ContentDescription"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:src="@drawable/fox"
            android:layout_gravity="center_vertical"
            android:cropToPadding="true"
            android:layout_margin="3dp"
            android:id="@+id/imageButtonnuevo"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123"
            android:ems="10"
            android:id="@+id/editText"
            android:singleLine="true"
            android:hint="@string/Codigo"
            android:imeActionId="@+id/cambiocodigofirmadodo"
            android:imeActionLabel="Cambiar"
            android:imeOptions="actionUnspecified"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
